# meanshift_parallelization

./: .gitignore  CMakeLists.txt  README.md  mean_shift_demo.sh  requirements.txt  run_experiments.sh  run_tests.sh  sbatchman_configs.yaml  sbatchman_launch_all.yaml  slic_ms_demo.sh  visualizer.py
data/: example_90x60.csv  original.csv
data/resized_batch/: resized_118035.csv  resized_124084.csv  resized_176035.csv  resized_232038.csv  resized_253036.csv  resized_35010.csv  resized_374067.csv  resized_385028.csv  resized_76002.csv
plots/: breakdown_mean_shift.py  breakdown_slic.py  config.py  csv_to_img.py  img_to_csv.py  strong_scaling.py  strong_scaling_all_plot_sbatchman.py  utils.py
py_utils/: analyze_all_perf_results.py  breakdown_mean_shift.py  breakdown_plot_mean_shift.py  breakdown_plot_slic.py  breakdown_slic.py  breakdown_slic_comparison.py  compare_slic_breakdown.py  compare_slic_breakdowns.py  config.py  csv_to_img.py  dev_std_images.py  faster_vs_slic_ms.py  graphs.py  img_to_csv.py  kernel_bw.py  main_breakdown_plot.py  metrics_plot_mean_shift.py  ms_visualization.py  ms_visualization2d.py  ms_visualization3d.py  new_separate.py  new_strong_scaling.py  output.csv  plot_compare_implementations.py  plot_metrics.py  plot_results.py  plotting.py  plotting_metrics.py  slic_breakdown_plot.py  strong_scaling_all_plot.py  strong_scaling_all_plot_sbatchman.py  strong_scaling_separate_slic.py  strong_scaling_single_plot.py  utils.py  visualize_img.py  weak_scaling_all_plot.py  weak_scaling_separate_slic.py
scripts/: batch_run_accms.sh  batch_run_slicms.sh  batch_run_slicms_acc.sh  batch_run_slicms_blas.sh  batch_run_slicms_matrix_omp.sh  batch_run_slicms_omp.sh  compile_variant.sh  plot_mean_shift_breakdown.sh  plot_mean_shift_metrics.sh  plot_slic_breakdown.sh  plot_strong_scaling_unified.sh  setup.sh  setup_python.sh  strong_scaling_main.sh  strong_scaling_meanshift.sh  strong_scaling_slic.sh  strong_scaling_slic_ms.sh  strong_scaling_slicms.sh  weak_scaling_main.sh  weak_scaling_slic.sh
src/: distances.c  kernels.c  main.cpp  mean_shift.c  mean_shift_acc.c  mean_shift_matrix.c  mean_shift_matrix_block.c  mean_shift_openblas.c  mean_shift_sqrd.c  point.c
src/include/: cluster.hpp  color_conversion.h  mean_shift.h  mean_shift.hpp  point.h  point.hpp  prova_mean_shift.hpp  timing.hpp  utils.h  utils.hpp
src/mean_shift_variants/: mean_shift_acc.c  mean_shift_matrix.c  mean_shift_matrix_block.c  mean_shift_openblas.c  mean_shift_sqrd.c
src/metrics/: mean_shift_breakdown.c  mean_shift_metrics.c  mean_shift_sqrd_breakdown.c  metrics.h  timing.h
src/preprocessing/: preprocessing.h  slic.c  slic_acc.c  slic_breakdown.c
src/timing/: mean_shift_breakdown.c
